...
        NavigationStack {
            ZStack {
                    Color.white
                        .ignoresSafeArea()
                VStack(alignment: .center, spacing: 0){

                    Text("Calendar")
                    .font(.system(size:27))
                    .bold()
                    .animation(.spring(), value: selectedDate)
                    .frame(alignment: .top)
                    .multilineTextAlignment(.center)
                    .padding()
...
                    HStack{
                        //display Available Reservations
                        Button(action: {
                            self.availableRes = true
                            self.yourResExist = false
                        }){
                            Text("Available Reservations")
                        }
                        .font(.headline)
                        .bold()
                        .foregroundColor(.white)
                        .frame(width: 120, height: 50)
                        .background(.gray)
...
                        
                        //display current reservations that have already been made
                        Button(action: {
                            self.availableRes = false
                            self.yourResExist = false
                        }){
                            Text("Current Reservations")
                        }
                        .font(.headline)
                        .bold()
                        .foregroundColor(.white)
                        .frame(width: 120, height: 50)
                        .background(.gray)
...
                    HStack{
                        //display court1 info
                        Button(action: {
                            courtNum = "1"
                            self.resVM.fetchRes(courtNum: courtNum)
                        }){
                            Text("Court 1")
                        }
                        .font(.headline)
                        .bold()
                        .foregroundColor(.white)
                        .frame(width: 85, height: 40)
                        .background(CustomColor.myColor)
...
                        
                        //display court 2 info
                        Button(action: {
                            courtNum = "2"
                            self.resVM.fetchRes(courtNum: courtNum)
                        }){
                            Text("Court 2")
                        }
                        .font(.headline)
                        .bold()
                        .foregroundColor(.white)
                        .frame(width: 85, height: 40)
                        .background(CustomColor.myColor)
...

                        //display court 3 info
                        Button(action: {
                            courtNum = "3"
                            self.resVM.fetchRes(courtNum: courtNum)
                        }){
                            Text("Court 3")
                        }
                        .font(.headline)
                        .bold()
                        .foregroundColor(.white)
                        .frame(width: 85, height: 40)
                        .background(CustomColor.myColor)
...
                    }
                    .padding(.vertical)

                    
                    ScrollView{
                    //Displays calendar
                    DatePicker("Select Date", selection: $selectedDate, in: Date()..., displayedComponents: [.date])
                        .datePickerStyle(.graphical)
                        .tint(CustomColor.myColor)
                        .padding(.horizontal)


                    
...
                            //writes to the database
                            resVM.makeRes(id: id, player: name, courtNum: courtNum)

                        }
                }
            label: {
                Text("Confirm Reservation")
                    .font(.headline)
                    .bold()
                    .foregroundColor(.white)
                    .frame(width: 300, height: 50)
                    .background(CustomColor.myColor)
                    .cornerRadius(10)
...
        
            VStack {
                Image("Logo")
                    .padding()
                
                
                Text("Reservation Confirmed!")
                    .multilineTextAlignment(.center)
                    .font(.largeTitle)
                    .bold()
                    .padding()
                
                Text("\(name.components(separatedBy: " ")[0]), your reservation for \(time) on \(date) at Court \(courtNum ) has been confirmed.")
...
                                
                
                //After user closes the confirmation screen, they will be brought back to the Calendar screen
                //Note: need to ensure that CalendarView is the root view and users cannot navigate back to previous screens after closing
                NavigationLink {CalendarResView().navigationBarBackButtonHidden(true)}
            label: {
                Text("Close")
                    .font(.headline)
                    .bold()
                    .foregroundColor(.white)
                    .frame(width: 300, height: 50)
                    .background(CustomColor.myColor)
                    .cornerRadius(10)
...
                            //updates to the database
                            resVM.deleteRes(id: id, courtNum: courtNum)

                        }
                }
            label: {
                Text("Delete Reservation")
                    .font(.headline)
                    .bold()
                    .foregroundColor(.white)
                    .frame(width: 300, height: 50)
                    .background(CustomColor.myColor)
                    .cornerRadius(10)
...
 
            VStack {
                Image("Logo")
                    .padding()
                
                
                Text("Reservation Deleted")
                    .multilineTextAlignment(.center)
                    .font(.largeTitle)
                    .bold()
                    .padding()
                
                Text("\(name), your reservation for \(time) on \(date) at Court \(courtNum ) has been deleted.")
...

    }
}


#Preview {
    CalendarResView()
}


