...
                .font(.largeTitle)
            
            // Form Fields
            VStack(spacing:15){
                
                // Email Input
                InputView(text: $viewModel.email, title: "Vanderbilt Email")
                
                // Password Input
                InputView(text: $viewModel.password, title: "Password", isSecureField: true)
                
                // Confirm Password Input
                ZStack(alignment: .trailing){
                    InputView(text: $viewModel.confirmPassword, title: "Confirm Password", isSecureField: true)
                    
                    // Icon to show user if passwords match
                    if !viewModel.password.isEmpty && !viewModel.confirmPassword.isEmpty
                    {
                        if viewModel.password == viewModel.confirmPassword{
                            Image(systemName: "checkmark.circle.fill")
...
                    }catch{
                        errorAlert = true
                        errorMessage = "Sorry, your request cannot be fulfilled right now. Please try again later."
                    }
                }
            }label:{
                Text("Sign Up")
                    .foregroundColor(.black)
                    .bold()
                    .frame(width:300, height:50)
            }
            .background(CustomColor.myColor)
            .disabled(!formIsValid)
...
