...
    
    var body: some View{
        let currUser = profileVM.user?.name ?? ""
        
        NavigationView {
            VStack{
                Button("Show Filters") {
                    self.showFilterOptions.toggle()
                }
                if showFilterOptions {
                    FilterOptionsMenuView(showFilterOptions: $showFilterOptions, sendFilter: $sendFilter, applyFilters: {
                        print("Updated sendFilter attributes: \(sendFilter.skillLevel)")
                        print("This is the current user\(currUser)")
                    })
                }
                //model to view all potential partners pulled from DB
                List(viewModel.matches) { i in
...
