...
                // Title of App
                Text("Get Matched.")
                    .font(.largeTitle)
                
                // Text Fields for Email + Password
                VStack(spacing:15){
                    InputView(text: $viewModel.email, title: "Email")
                    
                    InputView(text: $viewModel.password, title: "Password", isSecureField: true)
                    
                }
                
                // Forgot your Password
...
                            showProfile = true
                        }catch{
                            errorAlert = true
                        }
                    }
                } label: {
                    Text("Sign in")
                        .foregroundColor(.black)
                        .bold()
                        .frame(width:300, height:50)
                }
                .background(CustomColor.myColor)
                .cornerRadius(10)
...
